--- a/aboutlynda.html
+++ b/aboutlynda.html
@@ -30,9 +30,9 @@
 			</div>
 			<div id="main"><!-- This is the main content area of the page. Don't forget to change the title. -->
 				<div id="Lynda">
-					<img id="Lyndapic" src="Assets\images\pics\Lynda2.jpeg" />
+					<img id="Lyndapic" src="Assets\images\pics\Lynda2.JPG" />
 					<!--<img id="Lynda" src="Assets\images\pics\LyndaMartin.jpeg" />-->
-					<img id="Lyndapic" src="Assets\images\pics\Lynda3.jpeg" />
+					<img id="Lyndapic" src="Assets\images\pics\Lynda3.JPG" />
 				</div>
 				<section id="homePage">
 					<p id="homeTitle">Lynda Martin<br>Marriage and Family Therapist, LMFT</p>
