--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<div id="background">
-		<!--<img id="bridge" src="Assets\images\pics\bridge.jpg"></img>-->
+		<!--<img id="bridge" src="Assets\images\pics\bridge.JPG"></img>-->
 		<div id="content">
 			<div id="hide"><img src="Assets\images\icons\hamburger.png" /></div>		
 			<div id="left">
@@ -38,11 +38,11 @@
 			<div id="main"><!-- This is the main content area of the page. Don't forget to change the title. -->
 				<p id="title">Plan B... Marriage & Family Therapy</p>
 				<div class="sliderContainer">
-				  <img class="gal" src="Assets\images\slider\quote1.jpg"/>
-				  <img class="gal" src="Assets\images\slider\quote2.jpg"/>
-				  <img class="gal" src="Assets\images\slider\quote3.jpg"/>
-				  <img class="gal" src="Assets\images\slider\quote4.jpg"/>
-				  <img class="gal" src="Assets\images\slider\quote5.jpg"/>			  
+				  <img class="gal" src="Assets\images\slider\quote1.JPG"/>
+				  <img class="gal" src="Assets\images\slider\quote2.JPG"/>
+				  <img class="gal" src="Assets\images\slider\quote3.JPG"/>
+				  <img class="gal" src="Assets\images\slider\quote4.JPG"/>
+				  <img class="gal" src="Assets\images\slider\quote5.JPG"/>			  
 				</div>
 				<h4>Inspirational Quotes, Click/Tap images above to Enlarge</h4>
 				<section id="homePage">
