--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 			<div id="main"><!-- This is the main content area of the page. Don't forget to change the title. -->
 				<p id="title">Plan B... Marriage & Family Therapy</p>
 				<div class="sliderContainer">
-				  <img class="gal" src="Assets\images\slider\quote1.JPG"/>
-				  <img class="gal" src="Assets\images\slider\quote2.JPG"/>
-				  <img class="gal" src="Assets\images\slider\quote3.JPG"/>
-				  <img class="gal" src="Assets\images\slider\quote4.JPG"/>
-				  <img class="gal" src="Assets\images\slider\quote5.JPG"/>			  
+				  <img class="gal" src="Assets\images\slider\Quote1.JPG"/>
+				  <img class="gal" src="Assets\images\slider\Quote2.JPG"/>
+				  <img class="gal" src="Assets\images\slider\Quote3.JPG"/>
+				  <img class="gal" src="Assets\images\slider\Quote4.JPG"/>
+				  <img class="gal" src="Assets\images\slider\Quote5.JPG"/>			  
 				</div>
 				<h4>Inspirational Quotes, Click/Tap images above to Enlarge</h4>
 				<section id="homePage">
