--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<script type="text/javascript" src="Assets\js\slider.js"></script>	
 	<script src="Assets\modules\slick\slick.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Assets\modules\lightbox\dist\jquery.magnific-popup.js"></script>
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<div id="background">
