--- a/services.html
+++ b/services.html
@@ -6,6 +6,8 @@
 	<link href="Assets\css\stylesheet.css" media="(min-width: 960px)" rel="stylesheet"/>
 	<script type="text/javascript" src="Assets\js\jquery.js"></script>
 	<script type="text/javascript" src="Assets\js\navi.js"></script>
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">					
 </head>
 <body>
 	<div id="background">
