--- a/aboutlynda.html
+++ b/aboutlynda.html
@@ -2,8 +2,8 @@
 <head>
 	<title>Plan B Therapy :: Lynda Martin</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" media="(max-width: 960px)" href="Assets\css\mobile.css" />
-	<link href="Assets\css\stylesheet.css" media="(min-width: 960px)" rel="stylesheet"/>
+	<link rel="stylesheet" media="(max-width: 970px)" href="Assets\css\mobile.css" />
+	<link href="Assets\css\stylesheet.css" media="(min-width: 970px)" rel="stylesheet"/>
 	<script type="text/javascript" src="Assets\js\jquery.js"></script>
 	<script type="text/javascript" src="Assets\js\navi.js"></script>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -36,7 +36,7 @@
 					<!--<img id="Lynda" src="Assets\images\pics\LyndaMartin.jpeg" />-->
 					<img id="Lyndapic" src="Assets\images\pics\Lynda3.JPG" />
 				</div>
-				<section id="homePage">
+				<section id="homePageAbout">
 					<p id="homeTitle">Lynda Martin<br>Marriage and Family Therapist, LMFT</p>
 					<p>Lynda has experience working with individuals, children and families involved with the Department of Children and Family Services, family court, drug court, probation and victims of crime. She actively advocates for mental health awareness and client's service rights.<br><br>
 					Lynda specializes in individual therapy; couples counseling; family trauma and conflict resolution; parent/child relational issues; communication skills and strategies; stress management; anger management and with assisting individuals who are transitioning from various stages of life.<br><br>
