--- a/services.html
+++ b/services.html
@@ -74,5 +74,5 @@
 	</div>
 </body>
 <footer>
-<p id="DFP">Designed and Created by Digital FootPrints</p>
+<p id="DFP">Designed By Jonathan!  Visit Me!<a href="http://designedbyjonathan.com">Click Here!</a></p>
 </footer>
